fixed contrast error

--- a/frontend-project/src/components/ListMedia.css
+++ b/frontend-project/src/components/ListMedia.css
@@ -81,7 +81,7 @@ figcaption {
 
   font-size: 17px;
   font-weight: 500;
-  color: rgb(110, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 /** CSS FOR PAGINATION */
